@@ -33,8 +33,9 @@ and \code{efflist} objects.
 \method{plot}{eff}(x, x.var = which.max(levels), z.var = which.min(levels), 
     multiline = is.null(x$se), rug = TRUE, xlab, ylab, main = paste(effect, 
         "effect plot"), colors = palette(), symbols = 1:10, lines = 1:10, 
-    cex = 1.5, ylim, xlim = NULL, factor.names = TRUE, type = c("response", 
-        "link"), ticks = list(at = NULL, n = 5), alternating = TRUE, 
+    cex = 1.5, ylim, xlim = NULL, factor.names = TRUE, 
+    factor.ci.style=c("bars", "lines"), 
+    type = c("response", "link"), ticks = list(at = NULL, n = 5), alternating = TRUE, 
     rotx = 0, roty = 0, grid = FALSE, layout, rescale.axis = TRUE, 
     transform.x = NULL, ticks.x = NULL, key.args = NULL, row = 1, 
     col = 1, nrow = 1, ncol = 1, more = FALSE, ...) 
@@ -119,6 +120,9 @@ and \code{efflist} objects.
     axis limits are computed from the data.}
   \item{factor.names}{a logical value, default \code{TRUE}, that controls the inclusion of
     factor names in conditioning-variable labels.}
+  \item{factor.ci.style}{if \code{"bars"}, the default, confidence-interval error bars are drawn around the
+    fitted values at the levels of a factor; if \code{"lines"}, then the endpoints of the confidence
+    intervals are connected by line segments.}
   \item{style}{(for multinomial or proportional-odds logit models) \code{"lines"} (the default
     for a line plot, or \code{"stacked"} for a stacked-bar or stacked-area plot. In the latter
     case only fitted probabilities may be plotted and confidence envelopes cannot be shown.}
